fixed issues with horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+  overflow-x: hidden;
+}
 body {
   min-width: 800px;
 }
